--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,12 @@ logging.level.org.springframework.web=DEBUG
 # Set here configurations for the database connection
 
 # Connection url for the database
-spring.datasource.url = jdbc:mysql://localhost:3306/ccc4
+spring.datasource.url = @urlBanco@
+# spring.datasource.url = jdbc:mysql://localhost:3306/ccc4
 
 # Username and password
-spring.datasource.username = vitor
-spring.datasource.password = vitor
+spring.datasource.username = @usuarioBanco@
+spring.datasource.password = @senhaBanco@
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
